Designing the additional information section and resolving image overflow issues in games section

--- a/style.css
+++ b/style.css
@@ -988,7 +988,7 @@ main {
 
     margin: auto;
     height: 1px;
-    width: 80vw;    
+    width: 80%;    
     border: dotted 5px var(--color-back-2);   
     transform: skewX(60deg);
 }
@@ -1035,6 +1035,8 @@ details.t2-games[open] summary {
     background-color: var(--color-text-1);
     color: var(--color-back-2);
     line-height: 1.7rem;
+
+
     text-align: justify;
     text-shadow: 0px 0px 5px #fff;
 
@@ -1047,37 +1049,127 @@ details.t2-games[open] summary {
 
 }
 
-#tier{
+
+
+/* ##  Extra Info */
+#extra-info {
+    box-sizing: border-box;
+    
+    margin: 1rem;    
+    background-color: var(--color-back-2);
+    
+    padding: 1rem;
+}
+
+#extra-info-title {
+    background-color: var(--color-back-2);
+}
+
+
+#extra-info-panel {
+    width: 100%;
+    display: grid;    
+    grid-template-columns: 1fr;
+    gap: 1rem;
+ 
+}
+
+
+
+@media screen and (min-width: 1000px) {
+   
+    #tier-panel {grid-area: A;}
+    #stream-info {grid-area: B;}
+    #rules {grid-area: C;}
+    #ranking-bonus {grid-area: D;}
+
+   
+    #extra-info-panel {    
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    grid-template-areas:
+    "A B"
+    "C D"
+    ;
+    }
+}
+
+/*
+@media screen and (min-width: 1200px) {
+   
+    #tier-panel {grid-area: A; grid-row: 1 / -1;}
+    #stream-info {grid-area: B;}
+    #rules {grid-area: C;}
+    #ranking-bonus {grid-area: D;}
+
+   
+    #extra-info-panel {    
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: min-content;
+    gap: 1rem;
+    grid-template-areas:
+    "A B"
+    "A B"
+    "A C"
+    "A C"
+    "A D"
+    "A D"
+    ;
+    }
+}*/
+
+.extra-info-element {
+    
+    box-sizing: border-box;
+    
+    border: solid 4px var(--color-text-2);
+    background-color: var(--color-back-2);
+
+    background-image:
+    radial-gradient( var(--color-back-2) 40%, #000000A5 ),
+    radial-gradient(var(--color-base-2));
+    
+    padding: 1rem;    
+    border-radius: 10px;
+    height: 100%;
+}
+
+.extra-info-element > p {
+    font-family: "Comfortaa", sans-serif;
+    line-height: 2.4rem;
+    border-top: dotted 2px var(--color-base-2);
+    padding-top: 0.5rem;
+    text-indent: 0.5rem;
+}
+
+
+#tier-panel {
     display: flex;
     flex-flow: column wrap;
     align-items: center;
+    
 }
 
-#tier-table
+#tier-table {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 90%;
+    padding: 10px 0 10px 0;
+
+}
+
+.table-line
 {
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
-    padding: 10px;
-    width: 400px;
-
+    grid-template-columns: 3fr 4fr 5fr;
     p {
+        text-align: center;
         border-bottom: solid 2px white;
-        padding: 6px 0 4px 0;
+        padding: 6px 0.2rem 4px 0.2rem;
     }
+}
 
-    .t2 {
-        position: relative;
-        color: var(--color-tier-2a);
-    }
-
-    .t2::after {
-        content: "";        
-        width: 150%;
-        height: 120%;
-        transform: translateY(-100%) translateX(-100%);
-        display: block;
-        background-color: var(--color-high-1);
-        z-index: -1;
-        mix-blend-mode: color-burn;
-    }
+.table-line .t2 {
+        color: var(--color-tier-2b);
+        border-bottom: solid 2px var(--color-tier-2a);
 }
